src/main/java/com/example/infrastructure/errors/ErrorResponse.java
package com.example.infrastructure.errors;

public record ErrorResponse(String message) {
}
